# just-dna-marketplace

./: .env.template  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: API-REFERENCE.md  CHANGELOG.md  CLIENT.md  ROADMAP.md  SPEC.md  UPGRADE.md  WEBUI-MARKETPLACE.md  WEBUI-STORE.md
src/just_dna_marketplace/: __init__.py  cli.py  client.py  client_cli.py  config.py  groups.py  jwtauth.py  logging_setup.py  ratelimit.py  startup.py  version.py
src/just_dna_marketplace/api/: app.py  deps.py
src/just_dna_marketplace/api/routers/: auth.py  modules.py  namespaces.py  publish.py  reviews.py
src/just_dna_marketplace/db/: repository.py  schema.py
src/just_dna_marketplace/models/: api.py
src/just_dna_marketplace/services/: catalog.py  ingest.py  pmid_check.py  publish.py  revalidate.py  upgrade.py
src/just_dna_marketplace/storage/: base.py  hf.py  local.py
src/just_dna_registry/: __init__.py  cli.py  client.py  client_cli.py  config.py  groups.py  installid.py  jwtauth.py  logging_setup.py  permissions.py  startup.py  version.py
src/just_dna_registry/api/: app.py  deps.py
src/just_dna_registry/api/routers/: auth.py  modules.py  namespaces.py  orgs.py  publish.py  reviews.py
src/just_dna_registry/db/: repository.py  schema.py
src/just_dna_registry/models/: api.py
src/just_dna_registry/services/: catalog.py  ingest.py  pmid_check.py  publish.py  revalidate.py  upgrade.py
src/just_dna_registry/storage/: base.py
tests/: conftest.py  test_accounts.py  test_admin_ops.py  test_admin_removal.py  test_catalog.py  test_changelog.py  test_client_sdk.py  test_groups.py  test_hf_storage.py  test_import.py  test_jwt.py  test_logging.py  test_logs_api.py  test_migrations.py  test_moderation.py  test_onboarding.py  test_publish_auth.py  test_ratelimit.py  test_rbac_orgs.py  test_revalidate.py  test_reviews.py  test_startup.py  test_upgrade.py  test_v05.py  test_v06.py  test_version_guard.py
