[project]
name = "just-dna-marketplace"
version = "0.2.0"
description = "Reference client (and optional server) for the just-dna annotation module marketplace"
readme = "README.md"
requires-python = ">=3.13"
# Default install = the reference client only (lightweight). The server is the `server` extra.
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.26.8",
    "python-dotenv>=1.0.1",
    "just-dna-format>=0.1.0",
]

[project.optional-dependencies]
# Everything needed to RUN the marketplace: FastAPI app, server-side recompile, storage, admin CLI.
server = [
    "fastapi>=0.139.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.9",
    "eliot>=1.17.5",
    "just-dna-compiler>=0.1.0",
]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project.scripts]
# Client CLI works on the default install; the server admin CLI needs the `server` extra.
marketplace-client = "just_dna_marketplace.client_cli:app"
marketplace = "just_dna_marketplace.cli:app"

[dependency-groups]
dev = [
    "just-dna-marketplace[server]",
    "pytest>=9.0.3",
]
